--- a/public/index.html
+++ b/public/index.html
@@ -39,6 +39,6 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-    <script src="https://www.reactriot.com/entries/72-we-three/vote.js" type="text/javascript"></script>
+    <!-- <script src="https://www.reactriot.com/entries/72-we-three/vote.js" type="text/javascript"></script> -->
   </body>
 </html>
